"cannot find sampler state" error causing visual artifacts in Factorio
Running Factorio from steam on virgl/vrend results in texture sampling issues that produce rendering artifacts as pictured.
There are several instances of cannot find sampler state for 0 0
errors produced by vrend_apply_sampler_state(...)
.
Bisection points to c08c8419 as the regressor.
Expected (4fd84033 and earlier):